# wordpress-automation

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  issues-list.md  progress-tracker.md  progress-update.md  project-explaination.md  project-overview.md  project-structure.md  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_wp_sites.py  0002_create_tasks.py  0003_add_local_process_transport.py
backend/app/: __init__.py  config.py  crypto.py  main.py
backend/app/agent/: __init__.py  graph.py  wp_agent.py
backend/app/agent/orchestrator/: __init__.py  checkpointer.py  graph.py  manager.py  (+3 more)
backend/app/api/: __init__.py  routes.py  task_routes.py  wp_routes.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/evals/: __init__.py  report.py  runner.py  scoring.py  thresholds.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/app/wp/: __init__.py  credentials.py  rest_client.py  schemas.py  wpcli.py
backend/scripts/: run_evals.py
backend/tests/: conftest.py  test_crypto.py  test_elementor_builder.py  test_elementor_skill.py  test_elementor_tool.py  test_elementor_validator.py  test_evals.py  test_images.py  test_orchestrator_graph.py  test_planner.py  test_rest_client.py  test_sprint6_rest.py  test_sprint6_skills.py  test_sprint6_tools.py  test_stack.py  test_task_manager.py  test_task_routes.py  test_tools.py  test_wp_agent.py  test_wpcli.py
backend/tests/integration/: test_elementor_render.py  test_live_wp.py  test_orchestrator_persistence.py  test_sprint6_live.py
(+87 files in other folders)
