[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.112.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cryptography>=49.0.0",
    "fabric>=3.2.3",
    "fastapi[standard]>=0.138.0",
    "google-genai>=1.28.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.7",
    "langchain-google-genai>=2.1.6",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the live Dockerized WordPress instance (skipped when unreachable)",
]
